--- a/static/index.html
+++ b/static/index.html
@@ -13,5 +13,12 @@
   <noscript>To run this application, JavaScript is required to be enabled.</noscript>
   <%= htmlWebpackPlugin.options.serviceWorkerLoader %>
   <div id="app"></div>
+  <script>
+    (function() {
+      if('serviceWorker' in navigator) {
+          navigator.serviceWorker.register('/service-worker.js');
+        }
+      })();
+  </script>
 </body>
 </html>
